<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="500dp"
              android:background="#BFC9CA"
              tools:context="com.bignerdranch.android.beautytoday20.coatFragment"
              android:orientation = "vertical">


    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Spinner
        android:id="@+id/patternSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Spinner
        android:id="@+id/materialSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Spinner
        android:id="@+id/styleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <Spinner
        android:id="@+id/heelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id = "@+id/img"
        android:layout_height = "wrap_content"
        android:layout_width="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:padding = "10dp"
        android:layout_gravity = "center"
        android:layout_weight="0.60"
        />

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:text="@string/camera"/>

    <Button
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:text="@string/choose"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "right"
        android:text="@string/confirm"/>


</LinearLayout>
