<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context="com.bignerdranch.android.beautytoday20.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <ImageButton
            android:id="@+id/coat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toRightOf = "@+id/bagph"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:gravity = "center"
            android:layout_margin = "3dp"
            android:background = "#34495E"
            android:src="@drawable/longsleeves"
            android:text="@string/coat"/>

        <ImageButton
            android:id="@+id/dress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:gravity = "center"
            android:layout_margin = "3dp"
            android:background = "#E6B0AA"
            android:src="@drawable/dressicon"
            android:layout_toRightOf="@+id/coat"
            android:text="@string/dress"/>

        <ImageButton
            android:id="@+id/trousers"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:gravity = "center"
            android:layout_margin = "3dp"
            android:background = "#A2D9CE"
            android:src="@drawable/trousersicon"
            android:layout_toRightOf="@+id/dress"
            android:text="@string/trousers"/>

        <ImageButton
            android:id="@+id/skirt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:gravity = "center"
            android:layout_margin = "3dp"
            android:background = "#F9E79F"
            android:src="@drawable/skirticon"
            android:layout_toRightOf="@+id/trousers"
            android:text="@string/skirt"/>

        <ImageButton
            android:id="@+id/boots"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:gravity = "center"
            android:background = "#BFC9CA"
            android:layout_margin = "3dp"
            android:src="@drawable/shoeicon"
            android:layout_toRightOf="@+id/skirt"
            android:text="@string/boots"/>

        <ImageButton
            android:id="@+id/bag"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:gravity = "center"
            android:layout_margin = "3dp"
            android:background = "#A9CCE3"
            android:src="@drawable/bagicon"
            android:layout_toRightOf ="@+id/boots"
            android:text="bag"/>

        <Button
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Today"
            android:layout_below="@+id/bag"
            android:layout_toEndOf="@+id/skirt"/>

    </RelativeLayout>

    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="480dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:src = "@drawable/closet"
                    android:id = "@+id/fragment_container"/>


</LinearLayout>
